--- a/index.html
+++ b/index.html
@@ -7,13 +7,17 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@800&display=swap" rel="stylesheet">
+
   </head>
 
   <body>
-      <div class="slimComic"> <img src="images/comic1.jpg"> </div>
-      <div> <img src="images/comic2.jpg"> </div>
-      <div> <img src="images/tear1.jpg"> </div>
-      <div class="rightTear"> <img src="images/tear2.jpg"> </div>
+      <h2 class="comicTitle">COMICS</h2>
+      <div class="comicLeft"> <img src="images/comic1.jpg"> </div>
+      <div class="comicRight"> <img src="images/comic2.jpg"> </div>
+      <h2 class="tearTitle">TEAR ART</h2>
+      <div class="tearLeft"> <img src="images/tear1.jpg"> </div>
+      <div class="tearRight"> <img src="images/tear2.jpg"> </div>
   </body>
 </html>
 
